--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 <h4>GET STARTED</h4>
             </div>
         </section>
+        <section>
+            <h3>Our Services</h3>
+        </section>
     </main>
 </body>
 </html>
